# ifc_django_react

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .renderignore  ANALISE_PROJETO_IFC.md  CHANGELOG.md  CHANGELOG_v2.3.0.md  CORRECAO_BRANCH_GIT.md  CORREÇÕES_DEPLOY_RENDER.md  DEPLOY_CHECKLIST.md  DIAGNOSTICO_PRODUCAO.md  DIAGNOSTICO_RENDER.md  Dockerfile  ESCOLHA_CENARIO_BANCO.md  GUIA_DO_USUARIO.md  GUIA_INSTALACAO_MELHORIAS.md  INSTRUCOES_DEPLOY_FINAL.md  MELHORIAS_IMPLEMENTADAS.md  MUDANCAS_IMPLEMENTADAS.md  ORGANIZATION_COMPLETE.md  Procfile  QUICK_START_GUIDE.md  README.md  README_PROBLEMA_6_CUBOS.md  RENDER_DATABASE_CONFIG.md  VERIFICACAO_ARQUIVOS_ESTATICOS.md  VERIFICACAO_DEPLOY.md  build.sh  carregar_ifc.bat  check_deploy.py  conftest.py  docker-compose.yml  env.example  load_ifc_file.py  manage.py  manter_secao_databases.ps1  pyproject.toml  pytest.ini  remover_secao_databases.ps1  render.yaml  (+5 more)
core/: admin.py  consumers.py  forms.py  health.py  models.py  routing.py  test_health.py  urls.py  views.py  views_improved.py
dashboard/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
docs/: ESTRUTURA_PROJETO.md  GUIA_RAPIDO_v2.3.md  QUICK_START_RENDER.md  README.md  TWINZO_FEATURES_V2.3.md
frontend/: package.json  vite.config.js
ifc_monitoring/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
plant_viewer/: admin.py  apps.py  ifc_processor.py  models.py  serializers.py  tasks.py  test_validators.py  tests.py  urls.py  views.py
sensor_management/: admin.py  apps.py  models.py  tasks.py  test_validators.py  tests.py  urls.py  (+1 more)
(+54 files in other folders)
