[tool.poetry]
name = "ifc-monitoring"
version = "0.1.0"
description = "IFC Monitoring System"
authors = ["Diego Thuran <diego@example.com>"]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.2.7"
gunicorn = "21.2.0"
psycopg = {extras = ["binary"], version = "3.2.10"}
python-dotenv = "1.0.0"
dj-database-url = "2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
